--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -25,6 +26,8 @@
   </head>
 
   <body>
+
+    <!-- Header displaying current time and title -->
     <header class="box">
       <h1 class="title">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
