--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="time-container">
 
       <!-- 9AM timeblock -->
-      <div id="9hr" class="row time-block">
+      <div id="9" class="row time-block">
         <div class="col-2 col-md-1 hour text-end py-3">9AM</div>
         <textarea class="col-8 col-md-10 description" rows="3" placeholder="Add event here"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -45,7 +45,7 @@
       </div>
 
       <!-- 10AM timeblock -->
-      <div id="10hr" class="row time-block">
+      <div id="10" class="row time-block">
         <div class="col-2 col-md-1 hour text-end py-3">10AM</div>
         <textarea class="col-8 col-md-10 description" rows="3" placeholder="Add event here"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -54,7 +54,7 @@
       </div>
 
       <!-- 11AM timeblock -->
-      <div id="11hr" class="row time-block">
+      <div id="11" class="row time-block">
         <div class="col-2 col-md-1 hour text-end py-3">11AM</div>
         <textarea class="col-8 col-md-10 description" rows="3" placeholder="Add event here"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -63,7 +63,7 @@
       </div>
 
       <!-- 12PM timeblock -->
-      <div id="12hr" class="row time-block">
+      <div id="12" class="row time-block">
         <div class="col-2 col-md-1 hour text-end py-3">12PM</div>
         <textarea class="col-8 col-md-10 description" rows="3" placeholder="Add event here"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -72,7 +72,7 @@
       </div>
       
       <!-- 1PM timeblock -->
-      <div id="1hr" class="row time-block">
+      <div id="13" class="row time-block">
         <div class="col-2 col-md-1 hour text-end py-3">1PM</div>
         <textarea class="col-8 col-md-10 description" rows="3" placeholder="Add event here"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -81,7 +81,7 @@
       </div>
 
       <!-- 2PM timeblock -->
-      <div id="2hr" class="row time-block">
+      <div id="14" class="row time-block">
         <div class="col-2 col-md-1 hour text-end py-3">2PM</div>
         <textarea class="col-8 col-md-10 description" rows="3" placeholder="Add event here"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -90,7 +90,7 @@
       </div>
 
       <!-- 3PM timeblock -->
-      <div id="3hr" class="row time-block">
+      <div id="15" class="row time-block">
         <div class="col-2 col-md-1 hour text-end py-3">3PM</div>
         <textarea class="col-8 col-md-10 description" rows="3" placeholder="Add event here"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -99,7 +99,7 @@
       </div>
 
       <!-- 4PM timeblock -->
-      <div id="4hr" class="row time-block">
+      <div id="16" class="row time-block">
         <div class="col-2 col-md-1 hour text-end py-3">4PM</div>
         <textarea class="col-8 col-md-10 description" rows="3" placeholder="Add event here"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -108,7 +108,7 @@
       </div>
 
       <!-- 5PM timeblock -->
-      <div id="5hr" class="row time-block">
+      <div id="17" class="row time-block">
         <div class="col-2 col-md-1 hour text-end py-3">5PM</div>
         <textarea class="col-8 col-md-10 description" rows="3" placeholder="Add event here"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -126,6 +126,8 @@
     <script src="./script.js"></script>
   </body>
 
-  <footer id="encouragement"></footer>
+  <footer>
+    <p id="encouragement"></p>
+  </footer>
 
 </html>
