added detailed comments

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
     <script src="./script.js"></script>
   </body>
 
+  <!-- Extra bit of encouragement quotes throughout the day -->
   <footer>
     <p id="encouragement"></p>
   </footer>
